--- a/PROCESS.adoc
+++ b/PROCESS.adoc
@@ -23,7 +23,7 @@ Just follow these steps:
 . Add a file name in the name field
 . Copy the text into the Edit new file field
 . In the `Commit new file` section, add a short commit message.
-. In the `Comment` field, add a short message with the number of the issue associated with the chapter. (for example, "per discussion in #_XX_")
+. In the `Comment` field, add a short message with the number of the issue associated with the chapter (for example, "per discussion in #_XX_").
 . Click the `Create a new branch for this commit and start a new pull request` radio button. You can use the suggested branch name.
 . Click `Propose New File`. The `Open a Pull Request` window will open.
 . Click the gear icon in the Reviewers pane in the right column of the page.
@@ -46,7 +46,7 @@ When review is complete and the pull request merged, reviewers should perform on
 
 == Editing in The Open Source Way
 
-When a chapter has been merged into the Main branch, it is ready to procede through [the editorial process](https://github.com/theopensourceway/guidebook/blob/master/EDITORIAL.md). This process will involve the following steps (or "phases"):
+When a chapter has been merged into the Main branch, it is ready to procede through https://github.com/theopensourceway/guidebook/blob/master/EDITORIAL.md[the editorial process]. This process will involve the following steps (or "phases"):
 
 . Deverlopment edit
 . Subject matter review
