--- a/presenting-tosw.adoc
+++ b/presenting-tosw.adoc
@@ -1,63 +1,80 @@
 = Presenting The Open Source Way
-Author: Karsten Wade quaid@iquaid.org
+Author: Karsten Wade <quaid@iquaid.org>
 Updated: 2020-09-23
 
-== Presenting 'The Open Source Way' 2.0
+== Presenting _The Open Source Way_ 2.0
 
 An English idiom says, "There is a method to my madness.".footnote:[From "Hamlet" by William Shakespeare, Act 2 Scene 2: Polonius (aside) "Though this be madness, yet there is method in `t"]
-The 'madness' are the things you do that may not make sense to people outside of your situation.
-The 'method' means more than how you "do the madness"; it also refers to **why** you pursue that particular way of madness versus all other ways you could choose from.
+Most of the time, the things we do make absolutely no sense to outside observers.
+They look like sheer madness.
+But for those inside that messiness—inside that whirlwind of activity—there's a certain regularity, a certain predictability, and a certain motive.
+A method.
 
-This guide goes beyond the questions of, "What is your method for practicing the open source way" and how that method works, by really digging the question of, "_Why do you do it that way?_" -- what experience lead-to/required this method versus any other?
+Open source community management can seem like its own form of incomprehensible madness, especially to someone who's unfamiliar with how open source software gets made, or those who find themselves staring down the prospect of having to coordinate others to join in making it.
 
-Your takeway from this introduction should be two things:
+What this guide hopes to provide is some insight into an ever-evolving methodology.
+What are your preferences for practicing the open source way?
 
-. There is a what, how, and why to the practice of successfully and sustainably creating and maintaining open source software.
-. This guide is a distillation of the loosely held opinions of a sizeable group of open source practitioners of all levels, who are the kind of people always having to answer the question of why we do this open source thing the way we do it.
+But beyond that, this work is really digging into the question of _why_ someone might do the work this way.
+Why use this or that method to organize the madness?
 
-In particular, this guide is a living document that endeavors to gather and spread a diverse group of voices who are similarly and somewhat opinionated on the best ways to create and manage an open source software community.
+So from this introduction you should take two important points:
+
+. There is a _what_, a _how_, and a _why_ to the practice of successfully and sustainably creating and maintaining open source software.
+. This guide distills opinions from a sizeable group of open source practitioners, the kind of people always having to answer the question of _why we do this open source thing the way we do it_.
+
+In particular, this guide is a living document that endeavors to gather and spread a diverse group of voices who are similarly (and somewhat-opinionatedly) collecting the best ways to create and manage an open source software community.
 
 These voices are all part of https://theopensourcway.org[this community of practice around open source software community management].
 
-=== Assumptions we are making
+== Assumptions we're making
 
 When you look at the table of contents for this guide, notice how the flow of focus goes from the user, to the participant, to the contributor.
 
-This is because our opinion of how a community comes about and grows is, it all starts with a need.
+This arrangement specifically tracks our view of how a community comes about and grows. And it all starts with a need.
 
 . A person or persons needing a solution creates the first iteration of the software.
 . Other people with similar needs start using it, forming the core of the userbase.
 . From the userbase arise people who are enthusiasts of the software and things about/around it.
 . Finally arising from the users and the enthusiasts come people who are interested and have grown capable of contributing to the software in some way.
 
-Thus, the first and continuous focus for a project is to _take good care of your users_, for some of them will become your contributors, and you want them to do it out of love more than anger.
+Thus, the primary and continual focus for a project is to _take good care of your users_, for some of them will become your contributors, and you want them to do it out of love more than anger.
 
-A key element of all this is recognizing the value in contributions of all types, at all levels. Rather than elevating a single type of contribution to have more value within the project, the practice is to treat all manner of gifts to the project as of equal value. These contributions comprise content and code, hours and effort, and all manner of broad contributons for the project via events, help forums, infrastructure, and so on.
+A key element of all this is recognizing the value in contributions of all types, at all levels.
+Rather than valorizing only a single type of contribution, the best practice is to treat all manner of gifts to the project as equal.
+These contributions comprise content and code, hours and effort, and all manner of broad contributons for the project via events, discussion forums, infrastructure maintenance, and so on.
 
-When you lower barriers you make your project welcoming of particiption at all levels. It doesn't mean all barriers are removed, just lowered appropriately. Appropriate barriers are needed for someone getting keys to systems, for example, which are different barriers than for someone contributing a help article or patch to the config management system.
+When you lower barriers to participation, you make your project welcoming at all levels.
+This doesn't mean you _remove all barriers_—just lower most of them appropriately.
+Appropriate barriers are necessary for someone receiving keys to systems, for example, and these barriers are different from those allowing only certain participants to contribute a help article or a patch to the configuration management system.
 
-=== Structure of this guide
+== Structure of this guide
 
 Each section of this guide consists of one or more chapters.
 
-A chapter is a discrete discussion of a topic or a closely-related set of topics. Those topics are discussed in terms of a principle (what), implementation of that principle (how), and examples of why that principle is followed or recommended. This principle/implementation/example, or PIE, approach helps makes chapters consistent for reading.
+A chapter is a discrete discussion of a topic or a closely-related set of topics.
+Those topics are discussed in terms of a principle (what), implementation of that principle (how), and justifications for following or recommending that principle (why).
+This principle/implementation/example, or PIE, approach helps makes chapters consistent for reading.
 
-The idea is that you can open and read a chapter as a stand-alone experience without needing to read the rest of the guide to understand and act from the material in that chapter. Having the PIE consideration helps as reader find themselves in the guide at any point.
+The idea is that you can open and read a chapter as a stand-alone experience, without needing to read the rest of the guide to understand and act on the material in that chapter.
+Having the PIE consideration helps readers find themselves in the guide at any point.
 
 A chapter consists of several parts:
 
 * An introduction
-* Main material, written in third person POV, focusing on a balance of what, how, why content (PIE). The examples (stories) told here are brief and in the third person.
-* Expanded stories come at the end of the chapter, and are one or more stories from the chapter author(s). These may be written in the first person -- that may be the most effective way to make the point in many cases. These stories are modular, in that another story that makes a similar point but from a different situation can be used instead.
+* Primary material, written in third person POV, focusing on a balance of what, how, why content (PIE). The examples (stories) told here are brief and in the third person.
+* Expanded stories come at the end of the chapter, and are one or more stories from the chapter author(s). These may be written in the first person—that may be the most effective way to make the point in many cases. These stories are modular, in that another story that makes a similar point but from a different situation can be used instead.
 ** The idea is to start with a base story or set of stories in a chapter, and supplement or substitute other stories that are contributed to the project, such as through the interview effort.
 * Each chapter contains a lexicon at the end that defines the special usage for terms within that chapter.
 
-Finally, we are collecting stories from practitioners of the open source way, whose stories we know tend to illustrate more than one principle in action. The stories that are not interspersed into the chapters will be collected at the end for your endless uses.
+Finally, we're collecting stories from practitioners of the open source way, stories we know tend to illustrate more than one principle in action.
+Stories not interspersed into chapters will be collected at the end (for your endless uses).
 
-=== A community of practice always rebuilidng itself
+== A community of practice always rebuilidng itself
 
 What you are reading here is just one facet of the growing body of principles, implementations, and examples that this community is gathering, cultivating, and maintaining.
 
-In the end, what you read is just one way to pull this material together. There will be updates to this guide. There will be new versions, similar but new guides, and other ways to understand and present this material.
+In the end, it's just one way to pull this material together (one method, you might say, of organizing the madness).
+We'll be updating this guide. We'll be issueing similar, new guides. And we'll experiment with other ways to understand and present this material.
 
-But at the core, in addition to the what and the how that benefit your open source community, you will also learn to understand the **why** and be able to spread those stories wherever you go.
+But at the core—in addition to the _what_ and the _how_ that benefit your open source community—you will also learn to understand the _why_, and be able to spread those stories wherever you go.
